battery will only show if battery exists

--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -102,7 +102,7 @@ interval=10
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
+command=date '+%Y-%m-%d %H:%M'
 interval=5
 
 # Key indicators
