--- a/.config/i3/config
+++ b/.config/i3/config
@@ -33,7 +33,7 @@ bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+d exec --no-startup-id dmenu_recency
+bindsym $mod+d exec --no-startup-id rofi -show drun
 
 # start ssh launcher
 bindsym $mod+Shift+d exec rofi -show ssh
@@ -185,7 +185,7 @@ bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
 # Open applications on specific workspaces
-assign [class="keepassxc"] $ws5
+# assign [class="keepassxc"] $ws5
 assign [class="Steam"] $ws6
 assign [class="discord"] $ws7
 assign [class="Deluge"] $ws8
@@ -214,12 +214,15 @@ for_window [class="qt5ct"] floating enable sticky enable border normal
 for_window [class="Qtconfig-qt4"] floating enable sticky enable border normal
 for_window [class="Simple-scan"] floating enable border normal
 for_window [class="(?i)System-config-printer.py"] floating enable border normal
-for_window [class="Skype"] floating enable border normal
 for_window [class="Timeset-gui"] floating enable border normal
 for_window [class="(?i)virtualbox"] floating enable border normal
 for_window [class="Xfburn"] floating enable
 for_window [class="chatterino"] floating enable
 for_window [class="calibre"] floating enable
+for_window [class="Lutris"] floating enable
+for_window [class="dolphin"] floating enable
+for_window [class="keepassxc"] floating enable
+for_window [class="Deadbeef"] floating enable
 
 # switch to workspace with urgent window automatically
 for_window [urgent=latest] focus
@@ -278,16 +281,20 @@ mode "resize" {
 # Lock screen
 bindsym $mod+9 exec --no-startup-id blurlock
 
-# Autostart applications
-exec wal -R
+##################
+### exec stuff ###
+##################
+
+# exec wal -R
 # exec compton
-exec wal_steam -w
+# exec wal_steam -w
 exec thunar --daemon
 exec firefox
 exec discord
 exec jdownloader
-exec deluge
+# exec deluge
 
+exec --no-startup-id feh --bg-fill Pictures/meteor.png
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec --no-startup-id nitrogen --restore; sleep 1; compton -b
 # exec --no-startup-id manjaro-hello
@@ -301,9 +308,10 @@ exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 exec --no-startup-id xrandr --output DP-4 --mode 2560x1440 --rate 144 --primary
 # exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --rate 60.01 --primary
-exec --no-startup-id xinput set-prop 8 'Coordinate Transformation Matrix' 3 0 0 0 2.5 0 0 0 1
+# exec --no-startup-id xinput set-prop 8 'Coordinate Transformation Matrix' 3 0 0 0 2.5 0 0 0 1
 exec --no-startup-id mpd
 # exec --no-startup-id polybar bar
+exec --no-startup-id kdeconnect-indicator
 
 # Color palette used for the terminal ( ~/.Xresources file )
 # Colors are gathered based on the documentation:
@@ -343,13 +351,13 @@ bar {
 #	status_command i3status
 	position bottom
 
-## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
+# please set your primary output first. Example: 'xrandr --output eDP1 --primary'
 	tray_output primary
 #	tray_output eDP1
 
 	bindsym button4 nop
 	bindsym button5 nop
-#   font xft:URWGothic-Book 11
+#	font xft:URWGothic-Book 11
 	strip_workspace_numbers yes
 
     colors {
@@ -435,3 +443,24 @@ mode "$mode_gaps_outer" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
+
+##########################
+### Plasma Integration ###
+##########################
+
+# Try to kill the wallpaper set by Plasma (it takes up the entire workspace and hides everythiing)
+exec --no-startup-id wmctrl -c Plasma
+for_window [title="Desktop — Plasma"] kill, floating enable, border none
+# Kill the plasmashell
+# exec --no-startup-id killall plasmashell
+
+## Avoid tiling popups, dropdown windows from plasma
+# for the first time, manually resize them, i3 will remember the setting for floating windows
+for_window [class="plasmashell"] floating enable
+for_window [class="Plasma"] floating enable, border none
+for_window [title="plasma-desktop"] floating enable, border none
+for_window [title="win7"] floating enable, border none
+for_window [class="krunner"] floating enable, border none
+for_window [class="Kmix"] floating enable, border none
+for_window [class="Klipper"] floating enable, border none
+for_window [class="Plasmoidviewer"] floating enable, border none
