--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -29,9 +29,9 @@ separator_block_width=15
 markup=none
 
 # Restart i3 on click
-[restart]
-full_text=Restart
-command=i3-msg -q restart
+#[restart]
+#full_text=Restart
+#command=i3-msg -q restart
 #interval=0
 
 # Volume indicator
@@ -60,17 +60,17 @@ interval=30
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-[disk]
+
+[samba]
 label=NAS
-instance=/mnt/samba
+command=df -h /mnt/samba | awk '{ print $3 }' | tail -n 1
 separator=false
 interval=30
 
-[disk]
+[home]
 label=HOME
-instance=/home
+command=df -h / | awk '{ print $4 }' | tail -n 1
 interval=30
-
 
 # Network interface monitoring
 #
@@ -91,7 +91,7 @@ interval=10
 [cpu_usage]
 label=CPU
 interval=10
-min_width=CPU: 100.00%
+min_width=CPU: 100%
 #separator=false
 
 [battery]
@@ -102,21 +102,6 @@ interval=10
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M'
+command=date '+%Y-%m-%d %H:%M  '
 interval=5
 
-# Key indicators
-#
-# Add the following bindings to i3 config file:
-#
-# bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-# bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#instance=CAPS
-#interval=once
-#signal=11
-
-#[keyindicator]
-#instance=NUM
-#interval=once
-#signal=11
