--- a/.config/i3/config
+++ b/.config/i3/config
@@ -68,10 +68,8 @@ bindsym $mod+F5 exec terminal -e 'mocp'
 bindsym $mod+t exec --no-startup-id pkill compton
 bindsym $mod+Ctrl+t exec --no-startup-id compton -b
 # bindsym $mod+Shift+d --release exec "killall dunst; exec notify-send 'restart dunst'"
-bindsym Print exec --no-startup-id i3-scrot
-bindsym $mod+Print --release exec --no-startup-id i3-scrot -w
-bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
-bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
+bindsym Print exec --no-startup-id scrot
+bindsym $mod+Print --release exec --no-startup-id scrot -s
 bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
 
 # focus_follows_mouse no
@@ -223,6 +221,8 @@ for_window [class="Lutris"] floating enable
 for_window [class="dolphin"] floating enable
 for_window [class="keepassxc"] floating enable
 for_window [class="Deadbeef"] floating enable
+for_window [class="OpenSCAD"] floating enable
+for_window [class="cura"] floating enable
 
 # switch to workspace with urgent window automatically
 for_window [urgent=latest] focus
@@ -294,7 +294,7 @@ exec discord
 exec jdownloader
 # exec deluge
 
-exec --no-startup-id feh --bg-fill Pictures/meteor.png
+exec --no-startup-id feh --bg-fill --randomize Pictures/background
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec --no-startup-id nitrogen --restore; sleep 1; compton -b
 # exec --no-startup-id manjaro-hello
